test/Fail/Issue1606.err
Issue1606.agda:18.24-34: error: [UnequalTerms]
anything != f of type C
when checking that the given dot pattern c anything matches the
inferred value c f
